# Pt_faceting

./: .gitignore  README.md  compute_zigzag_step_tilt.py  hbn_zigzag_step_tilt_angles.md  pyproject.toml  requirements.txt
scripts/: submit_qe_leonardo.slurm  train_mace_leonardo.slurm
src/pt_faceting/: __init__.py  analysis.py  cli.py  dataset.py  mace_wrapper.py  parsers.py  plotting.py
tests/: test_analysis.py  test_parsers.py
